로그인 처리 시 관리자 홈으로로 이동

--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -22,3 +22,14 @@
 html > body {
  font-family: 'LotteMartDream', sans-serif;
 } 
+
+.logo {
+  font-size:2rem;
+  display:inline-flex;
+}
+
+.logo > span:last-child {
+  font-style:italic;
+  margin-left:0.5rem;
+  font-weight:bold;
+} 
