관리자 로그아웃

--- a/src/main/webapp/WEB-INF/jsp/adm/part/mainLayoutHead.jspf
+++ b/src/main/webapp/WEB-INF/jsp/adm/part/mainLayoutHead.jspf
@@ -4,7 +4,7 @@
 <header class="top-bar h-20 bg-white">
 	<!-- 로고 -->
 	<div class="container mx-auto h-full flex">
-		<a href="#" class="logo flex items-cneter ml-2">
+		<a href="/adm/home/main" class="logo flex items-cneter ml-2">
 			<span>
 				<i class="fas fa-people-arrows"></i>
 			</span>
@@ -19,20 +19,26 @@
 			<ul class="flex h-full">
 				<li>
 					<a class="text-xl px-4 flex items-center h-full hover:underline"
-						href="#">
+						href="/adm/home/main">
 						<span>관리자 홈</span>
 					</a>
 				</li>
 				<li>
 					<a class="text-xl px-4 flex items-center h-full hover:underline"
-						href="#">
+						href="/adm/board/list">
 						<span>게시판 관리</span>
 					</a>
 				</li>
 				<li>
 					<a class="text-xl px-4 flex items-center h-full hover:underline"
-						href="#">
+						href="/adm/article/list">
 						<span>게시물 관리</span>
+					</a>
+				</li>
+				<li>
+					<a class="text-xl px-4 flex items-center h-full hover:underline"
+						href="/adm/member/doLogout">
+						<span>관리자 로그아웃</span>
 					</a>
 				</li>
 			</ul>
