관리자 게시물 리스트 상단에 게시판 변경 셀렉트 박스 추가

--- a/src/main/webapp/WEB-INF/jsp/adm/part/head.jspf
+++ b/src/main/webapp/WEB-INF/jsp/adm/part/head.jspf
@@ -10,9 +10,23 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+<!-- 제이쿼리 불러오기 -->
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- 테일윈드 불러오기 -->
 <link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css" />
+	href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css">
+
+<!-- 폰트어썸 불러오기 -->
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
 <link rel="stylesheet" href="/resource/common.css" />
 <link rel="stylesheet" href="/resource/adm/common.css" />
+
+<%="<script>"%>
+const param = ${paramJson};
+<%="</script>"%>
 </head>
 <body class="bg-gray-200">
